--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "expo": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
@@ -26,7 +27,8 @@
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.24.0",
+    "jest": "^29.7.0"
   },
   "private": true
 }
