--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "web": "expo start --web",
     "test": "jest"
   },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": [
+      "./jest-setup-after-env.js"
+    ]
+  },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -30,7 +36,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "jest": "^29.7.0"
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.8.1",
+    "jest": "^29.7.0",
+    "jest-expo": "~51.0.4"
   },
   "private": true
 }
